<resources>
    <string name="app_name">Cocinegocios</string>
    <string name="perfilTitulo">Perfil</string>
    <string name="nombreTitulo">Nombre:</string>
    <string name="apellidosTitulo">Apellidos:</string>
    <string name="gmailTitulo">Gmail:</string>
    <string name="DNITitulo">DNI:</string>
    <string name="telefonoTitulo">Teléfono:</string>
    <string name="nacimientoTitulo">Nacimiento:</string>
    <string name="contraseñaTitulo">Contraseña:</string>
    <string name="contraseñaRepetirTitulo">Repetir contraseña:</string>

    <string name="oficioTexto">Oficio:</string>
    <string name="edadTitulo">Edad:</string>

    <string name="menuTitulo">Menu</string>
    <string name="CrearEspacios">Crear espacios</string>
    <string name="GestionarTrabajadores">Gestionar trabajadores</string>
    <string name="GestionarComandas">Gestionar comandas</string>
    <string name="GestionarNegocio">Gestionar negocio</string>
    <string name="CerrarSesion">Cerrar sesión</string>

    <string name="negociosTitulo">Negocios</string>

    <string name="textViewTrabajadores">Trabajadores</string>
    <string name="textViewSolicitudes">Solicitudes</string>
    <string name="inicioSesionTitulo">Inicio de Sesión</string>

    <string name="negocioTitulo">Registro de negocios</string>
    <string name="correoNegocioTitulo">Correo del negocio:</string>
    <string name="nombreNegocioTitulo">Nombre del negocio:</string>
    <string name="localidadTitulo">Localidad:</string>

    <string name="espacioTitulo">Espacio:</string>
    <string name="espaciosTitulo">Espacios</string>
    <string name="mesaTitulo">Mesa:</string>
    <string name="nombreEspacio">Nombre del espacio del negocio:</string>
    <string name="nMesasEspacio">Nº de mesas:</string>
    <string name="zonaTitular">Zona:</string>
    <string name="titularMesas">Mesa nº:</string>

    <string name="categoriaTitulo">Categoría:</string>
    <string name="categoriaBoton">categorias</string>
    <string name="nombreTituloCategoria">Nombre de la categoría:</string>

    <string name="registroDeProductosTitulo">Registro de productos</string>
    <string name="edicionDeProductosTitulo">Edición de productos</string>
    <string name="nombreProductoTituloTitulo">Nombre del producto:</string>
    <string name="descripcionProductoTitulo">Descripción del producto:</string>
    <string name="pasosASeguirTitulo">Pasos a seguir:</string>
    <string name="precioProductoTitulo">Precio:</string>
    <string name="productoTitulo">Producto</string>
    <string name="productosTitulo">Productos</string>
    <string name="cantidadDelProducto">Cantidad del producto:</string>
    <string name="subtotalTitulo">Subtotal:</string>
    <string name="tituloCantidad">Cantidad:</string>

    <string name="comandaTitulo">Comanda</string>
    <string name="comandasTitulo">Comandas</string>
    <string name="comandaSeñaTitulo">Comanda:</string>

    <string name="tituloRolUsuario">Rol del  usuario:</string>
    <string name="camareroTitulo">Camarero</string>
    <string name="cocineroTitulo">Cocinero</string>

    <string name="botonCrear">Crear</string>
    <string name="botonCrearCategoria">Crear categoria</string>
    <string name="botonIniciarSesion">Iniciar Sesión</string>
    <string name="botonRegistrarse">Registrarse</string>
    <string name="botonCancelar">Cancelar</string>
    <string name="botonActualizar">Actualizar</string>
    <string name="botonCambiar">Cambiar</string>
    <string name="botonSelecionarImagen">Seleccionar Imagen</string>
    <string name="botonDesloguearse">Log out</string>
    <string name="botonCerrar">Cerrar</string>
    <string name="botonNotificar">notificar</string>
    <string name="botonAceptar">Aceptar</string>
    <string name="botonRechazar">Rechazar</string>
    <string name="botonCambiarOficioTrabajador">Cambiar de oficio</string>
    <string name="botonEliminar">Eliminar</string>
    <string name="botonAccederAdmin">Acceder como administrador</string>
    <string name="botonSolicitarAcceso">Solicitar acceso</string>

</resources>