<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GrisOscuro"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/StringDePantallaInicial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/BlancoGrisaceo"
        android:text="@string/app_name">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <!-- Contenedor horizontal para los TextViews de "Inicio de sesión" y "Registrarse" -->
        <LinearLayout
            android:id="@+id/textLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/GrisClaro"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/inicioSesionTitulo"
                android:textSize="16sp"
                android:textColor="@color/AzulClaro"
                android:gravity="center"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/botonRegistrarse"
                android:textSize="16sp"
                android:textColor="@color/BlancoGrisaceo"
                android:gravity="center"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <View
            android:id="@+id/indicator"
            android:layout_width="0dp"
            android:layout_height="6dp"
            android:background="@color/AzulClaro"
            app:layout_constraintTop_toBottomOf="@id/textLayout"
            tools:ignore="MissingConstraints" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/ViewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GrisOscuro"
        android:layout_weight="0.5">
    </LinearLayout>
</LinearLayout>