<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    android:orientation="vertical"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/GrisOscuro">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="6"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textoComanda"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="10"
                android:textSize="30sp"
                android:textColor="@color/BlancoGrisaceo"
                android:text="@string/comandaTitulo"
                android:textStyle="bold"/>
        </LinearLayout>

        <ListView
            android:id="@+id/listaProductos"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/BlancoGrisaceo">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="3">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:background="@drawable/borde_textview">

                <TextView
                    android:id="@+id/textoTituloSubtotal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/subtotalTitulo"
                    android:textColor="@color/BlancoGrisaceo"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/subTotalComanda"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:background="@drawable/borde_textview"
                    android:gravity="center"
                    android:text="0.00"
                    android:textColor="@color/BlancoGrisaceo"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonCerrarComanda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="@color/AzulClaro"
                android:text="@string/botonCerrar"
                android:textColor="@color/BlancoGrisaceo"
                android:textSize="15sp"
                tools:ignore="TextSizeCheck" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2.6"/>

            <Button
                android:id="@+id/botonMarcarComoLeidoComanda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="@color/AzulClaro"
                android:text="@string/botonNotificar"
                android:textColor="@color/BlancoGrisaceo"
                android:textSize="15sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>