<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GrisOscuro"
    tools:context=".RegistroDeNegocios"
    android:id="@+id/mainLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2.5"
        android:layout_margin="2dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="3">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/BotonRegresarNegocios"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="3dp"
                android:backgroundTint="@color/AzulClaro"
                app:icon="@drawable/boton_regresar"
                app:iconSize="20dp"
                app:iconTint="@color/BlancoGrisaceo"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/negocioTitulo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="7"
            android:textSize="25sp"
            android:text="@string/negocioTitulo"
            android:textColor="@color/BlancoGrisaceo"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:orientation="vertical"
        android:layout_weight="35"
        android:layout_margin="5dp"
        android:backgroundTint="@color/BlancoGrisaceo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_margin="3dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nombreNegocioTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/Negro"
                    android:layout_marginLeft="5dp"
                    android:text="@string/nombreNegocioTitulo"
                    tools:ignore="RtlHardcoded">
                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical"
                    style="@style/TextInputLayoutCustomStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nombreNegocio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="30"
                        android:textColor="@color/Negro"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_margin="3dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/gmailNegocioTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/Negro"
                    android:layout_marginLeft="5dp"
                    android:text="@string/correoNegocioTitulo"
                    tools:ignore="RtlHardcoded">
                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical"
                    style="@style/TextInputLayoutCustomStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gmailNegocio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="30"
                        android:textColor="@color/Negro"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_margin="3dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/spinnerLocalidadNegocioTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/Negro"
                    android:layout_marginLeft="5dp"
                    android:text="@string/localidadTitulo"
                    tools:ignore="RtlHardcoded">
                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical"
                    style="@style/TextInputLayoutCustomStyle">

                    <Spinner
                        android:id="@+id/spinnerLocalidadNegocio"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        tools:ignore="TouchTargetSizeCheck"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="14"
                android:orientation="vertical">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imagenLocalRegistro"
                    android:layout_width="260dp"
                    android:layout_height="260dp"
                    android:layout_gravity="center"
                    android:background="@color/GrisClaro"
                    app:strokeWidth="10dp"
                    app:contentPadding="10dp"
                    app:shapeAppearanceOverlay="@style/RoundedCornersImageRestoImagenes"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <Button
                        android:id="@+id/botonAñadirImagenLocal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="15dp"
                        android:textSize="13sp"
                        android:textColor="@color/BlancoGrisaceo"
                        android:backgroundTint="@color/AzulClaro"
                        android:text="@string/botonSelecionarImagen">
                    </Button>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_weight="1"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/botonRegistrarNegocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textColor="@color/BlancoGrisaceo"
            android:backgroundTint="@color/AzulClaro"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:text="@string/botonCrear" />
    </LinearLayout>
</LinearLayout>