<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="30dp"
    android:orientation="vertical"
    android:background="#000000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/GrisClaro"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_margin="3dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nombreEspacio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="left"
                android:layout_weight="1"
                android:textColor="@color/BlancoGrisaceo"
                android:layout_marginLeft="5dp"
                android:text="@string/nombreEspacio"
                tools:ignore="RtlHardcoded">
            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical"
                style="@style/TextInputLayoutCustomStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombrePropuestoEspacio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textColor="@color/BlancoGrisaceo"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_margin="3dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nMesasEspacio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="left"
                android:layout_weight="1"
                android:textColor="@color/BlancoGrisaceo"
                android:layout_marginLeft="5dp"
                android:text="@string/nMesasEspacio"
                tools:ignore="RtlHardcoded">
            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical"
                style="@style/TextInputLayoutCustomStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nMesasPropuestoEspacio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="5"
                    android:textColor="@color/BlancoGrisaceo"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/botonCrearCategoriaPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textSize="13sp"
            android:text="@string/botonCrear"
            android:backgroundTint="@color/AzulClaro"
            android:textColor="@color/Blanco"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>